--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-    "name": "albumart-grab",
-    "version": "0.0.1",
-    "private": true,
-    "dependencies": {},
-    "devDependencies": {
-        "grunt": "~0.4.2",
-        "grunt-contrib-haml": "~0.1.1",
-        "grunt-contrib-sass": "~0.7.2",
-        "grunt-contrib-watch": "~0.5.3",
-        "grunt-csscomb": "~2.0.1"
-    }
+  "name": "albumart-grab",
+  "version": "0.0.1",
+  "private": true,
+  "dependencies": {},
+  "devDependencies": {
+    "grunt": "~0.4.2",
+    "grunt-contrib-concat": "^0.4.0",
+    "grunt-contrib-haml": "~0.1.1",
+    "grunt-contrib-sass": "~0.7.2",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-csscomb": "~2.0.1"
+  }
 }
