--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "albumart-grab",
-  "version": "0.0.1",
+  "name": "grab-em",
+  "version": "0.0.11",
   "private": true,
   "dependencies": {},
   "devDependencies": {
