--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "grunt-contrib-haml": "~0.1.1",
     "grunt-contrib-sass": "~0.7.2",
     "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-uglify": "^0.4.0",
     "grunt-csscomb": "~2.0.1"
   }
 }
